--- a/proj1/index.html
+++ b/proj1/index.html
@@ -1,7 +1,14 @@
 <html>
 	<head>
+		Project 1 writeup
 	</head>
 	<body>
-		Project 1 here
+		Overview:
+		Task1:
+		Task2:
+		Task3:
+		Task4:
+		Task5:
+		Task6:
 	</body>
 </html>
