--- a/proj1/index.html
+++ b/proj1/index.html
@@ -4,11 +4,11 @@
 	</head>
 	<body>
 		Overview:
+	</body>
+	<body>
 		Task1:
+	</body>
+	<body>
 		Task2:
-		Task3:
-		Task4:
-		Task5:
-		Task6:
 	</body>
 </html>
