--- a/proj1/index.html
+++ b/proj1/index.html
@@ -3,12 +3,11 @@
 		Project 1 writeup
 	</head>
 	<body>
+		<h1>
 		Overview:
-	</body>
-	<body>
-		Task1:
-	</body>
-	<body>
-		Task2:
+		</h1>
+		<p>
+		This is an overview
+		</p>
 	</body>
 </html>
