--- a/proj1/index.html
+++ b/proj1/index.html
@@ -7,7 +7,8 @@
 		Overview:
 		</h1>
 		<p>
-		This is an overview
+		In this project, I implemented a rasterizer which supports basic rasterizaing operations as well as texture mapping. i have learnt the lower level working details
+			of rasterizaing and texture mapping.
 		</p>
 		<h1>
 		Task1:
