--- a/proj1/index.html
+++ b/proj1/index.html
@@ -18,7 +18,7 @@
 			the triangle according to the formula described in the lecture(if all 3 line equations return negative/positive at the same time then it is 
 			inside the triangle). Then I call fill_pixel() on that pixel.
 		<br> As described above.
-		<img src="1.png", alt="task1">
+		<br> <img src="./1.png", alt="task1">
 		</p>
 	</body>
 </html>
