--- a/proj1/index.html
+++ b/proj1/index.html
@@ -14,11 +14,11 @@
 		Task1:
 		</h1>
 		<p>
-		I first find the bounding box of the triangle. Then I iterate over all the pixels inside the bounding box and check whether the point is inside
+		1. I first find the bounding box of the triangle. Then I iterate over all the pixels inside the bounding box and check whether the point is inside
 			the triangle according to the formula described in the lecture(if all 3 line equations return negative/positive at the same time then it is 
 			inside the triangle). Then I call fill_pixel() on that pixel.
-		<br> As described above.
-		<br> <img src="./1.png", alt="task1">
+		<br> 2. As described above.
+		<br> 3. <img src="./1.png", alt="task1">
 		</p>
 	</body>
 </html>
