--- a/proj1/index.html
+++ b/proj1/index.html
@@ -34,5 +34,12 @@
 		<br><img src="./2-2.png", alt="2">
 		<br><img src="./2-3.png", alt="3">
 		</p>
+		<h1>
+		Task3:
+		</h1>
+		<p>
+		1:I adjust the translate parameters for the left leg to make the robot look like just jumped from the ground.
+		<br> <img src="./3.png", alt="1">
+		</p>
 	</body>
 </html>
