--- a/proj1/index.html
+++ b/proj1/index.html
@@ -41,5 +41,15 @@
 		1:I adjust the translate parameters for the left leg to make the robot look like just jumped from the ground.
 		<br> <img src="./3.png", alt="1">
 		</p>
+		<h1>
+		Task4:
+		</h1>
+		<p>
+		1:barycentric coordinates describe the linear interpolation of the vertices. It abstractly shows mixed relation between the selected point with
+			respect to all the vertices.
+		<br> <img src="./4-1.png", alt="1">
+		<br>  2:
+		<br> <img src="./4-2.png", alt="2">
+		</p>
 	</body>
 </html>
