--- a/proj1/index.html
+++ b/proj1/index.html
@@ -46,7 +46,8 @@
 		</h1>
 		<p>
 		1:barycentric coordinates describe the linear interpolation of the vertices. It abstractly shows mixed relation between the selected point with
-			respect to all the vertices.
+			respect to all the vertices. In the following example of the triangle, the color of a certain pixel inside triangle is decided by
+			how close the pixel is to the 3 vertices.
 		<br> <img src="./4-1.png", alt="1">
 		<br>  2:
 		<br> <img src="./4-2.png", alt="2">
