--- a/proj1/index.html
+++ b/proj1/index.html
@@ -85,5 +85,8 @@
 		<br>:<img src="./6-3.png", alt="1">
 		<br>:<img src="./6-4.png", alt="1">
 		</p>
+		<h1>
+			Website:https://cal-cs184-student.github.io/sp22-project-webpages-BradyWang888/proj1/index.html
+		</h1>
 	</body>
 </html>
