--- a/proj2/index.html
+++ b/proj2/index.html
@@ -17,7 +17,7 @@
 		<img src="./1-5.png", alt="task1">
 		<img src="./1-6.png", alt="task1">
 		<br>3:
-		<img src="./1-7.png", alt="task1">
+		<br><img src="./1-7.png", alt="task1">
 		</p>
 		<h1>
 			Task2:
