--- a/proj2/index.html
+++ b/proj2/index.html
@@ -10,7 +10,7 @@
 		1:de Casteljau's algorithm will each time, linear interpolate two nearby points with parameter t until we get n-1 new points, and repeat the process until we have only 1 point left.
 			In my implementation, I just iterate over all the nearby points, use (1-t)*p1 + t * p2 to get the new point. Repeat the process until I get n - 1 points.
 		<br>2:
-		<img src="./1-1.png", alt="task1">
+		<br><img src="./1-1.png", alt="task1">
 		<img src="./1-2.png", alt="task1">
 		<img src="./1-3.png", alt="task1">
 		<img src="./1-4.png", alt="task1">
