--- a/proj2/index.html
+++ b/proj2/index.html
@@ -23,6 +23,16 @@
 			Task2:
 		</h1>
 		<p>
+		1:For Bezier surfaces, we first use de Casteljau's algorithm with t=u on each row of the control points(n*n in total) to get n Bezier Curves,
+		then, use de Casteljau's algorithm with t=v on n control points from these n Bezier Curves to get the surface point (u,v).
+		My implementation basically follow the procedure mentioned above.
+		<br>2:
+		<br><img src="./2.png", alt="task2">
+		</p>
+		<h1>
+			Task3:
+		</h1>
+		<p>
 		</p>
 	</body>
 </html>
