--- a/proj2/index.html
+++ b/proj2/index.html
@@ -33,6 +33,12 @@
 			Task3:
 		</h1>
 		<p>
+		1:I first get all the nearby points and store them in a vector array; then I iterate over the array two adjacent points a time, calculate two
+			vectors v1 and v2, and vv = cross product of v1 and v2,then I add vv to v, which is the running sum of all the vectors. In the end, I just
+			call v.normalize() and return the v.
+		<br>2:
+		<br><img src="./3-1.png", alt="task3">
+			<img src="./3-2.png", alt="task3">
 		</p>
 	</body>
 </html>
