--- a/proj2/index.html
+++ b/proj2/index.html
@@ -40,5 +40,15 @@
 		<br><img src="./3-1.png", alt="task3">
 			<img src="./3-2.png", alt="task3">
 		</p>
+		<h1>
+			Task4:
+		</h1>
+		<p>
+		1: I first define pointers to all the edges, vertices, halfedges and faces; then I update the pointers for each of them.
+		<br>2:
+		<br><img src="./4-1.png", alt="task4">
+			<img src="./4-2.png", alt="task4">
+		<br>N/A
+		</p>
 	</body>
 </html>
