--- a/proj2/index.html
+++ b/proj2/index.html
@@ -48,7 +48,20 @@
 		<br>2:
 		<br><img src="./4-1.png", alt="task4">
 			<img src="./4-2.png", alt="task4">
-		<br>N/A
+		<br>3:N/A
+		</p>
+		<h1>
+			Task5:
+		</h1>
+		<p>
+		1:I first define pointers to all existing as well as newly created edges, vertices, halfedges and faces;then I update pointers for each of them.
+		<br>2:
+		<br><img src="./5-1.png", alt="task5">
+			<img src="./5-2.png", alt="task5">
+		<br>3:
+		<br><img src="./5-3.png", alt="task5">
+			<img src="./5-4.png", alt="task5">
+		<br>4: N/A
 		</p>
 	</body>
 </html>
