--- a/proj2/index.html
+++ b/proj2/index.html
@@ -4,6 +4,13 @@
 	</head>
 	<body>
 		<h1>
+			Overview:
+		</h1>
+		<p>
+			In this project, I got hands on experience with de Casteljau's algorithm, Bezier curves and surfaces as well as 
+			the working details of mesh representation of 3D objects.
+		</p>
+		<h1>
 			Task1:
 		</h1>
 		<p>
@@ -63,5 +70,8 @@
 			<img src="./5-4.png", alt="task5">
 		<br>4: N/A
 		</p>
+		<h1>
+			https://cal-cs184-student.github.io/sp22-project-webpages-BradyWang888/proj2/index.html
+		</h1>
 	</body>
 </html>
