--- a/proj3-1/index.html
+++ b/proj3-1/index.html
@@ -1,7 +1,51 @@
 <html>
 	<head>
+		Project 3-1 Writeup
 	</head>
 	<body>
-		Project 3-1 here
+		<h1>
+			Overview:
+		</h1>
+		<p>
+
+		</p>
+		<h1>
+			Part1:
+		</h1>
+		<p>
+			1.For ray generation, I first translate the point from image space to camera space,
+			then calculate the camera ray, then use c2w to translate it into world space, normalize it and generate the world ray.
+			For primitive intersection, I first calculate the intersection time, check if it is valid, then calculate the intersection point.
+			<br>2.I used Moller Trumbore algorithm from lecture to get t and b1, b2, then I get b1 = 1 - b1 - b2. Then I check if 
+			t and b1,b2,b3 are all valid, if all valid then return true.
+			<br>3.
+		</p>
+		<h1>
+			Part2:
+		</h1>
+		<p>
+
+		</p>
+		<h1>
+			Task3:
+		</h1>
+		<p>
+
+		</p>
+		<h1>
+			Task4:
+		</h1>
+		<p>
+
+		</p>
+		<h1>
+			Task5:
+		</h1>
+		<p>
+
+		</p>
+		<h1>
+			https://cal-cs184-student.github.io/sp22-project-webpages-BradyWang888/proj2/index.html
+		</h1>
 	</body>
 </html>
