--- a/proj3-1/index.html
+++ b/proj3-1/index.html
@@ -24,7 +24,10 @@
 			Part2:
 		</h1>
 		<p>
-
+			1.For leaf node, I just set the start and end pointers.For non-leaf node, I chose the average of mid points to seperate primitives
+			into groups of 2. The axis I chose is the longest axis. I used std::partition to help with updating the array of primitives.
+			<br>2.
+			<b3>3.rendering with BVH structure is much faster than without BVH structure.
 		</p>
 		<h1>
 			Task3:
@@ -45,7 +48,7 @@
 
 		</p>
 		<h1>
-			https://cal-cs184-student.github.io/sp22-project-webpages-BradyWang888/proj2/index.html
+			https://cal-cs184-student.github.io/sp22-project-webpages-BradyWang888/proj3-1/index.html
 		</h1>
 	</body>
 </html>
