--- a/proj3-2/index.html
+++ b/proj3-2/index.html
@@ -1,7 +1,23 @@
 <html>
 	<head>
+		Project 3-2
 	</head>
 	<body>
-		Project 3-2 here
+		<h1>
+			Part2:
+		</h1>
+		<p>
+			1.
+		</p>
+		<h1>
+			Part2:
+		</h1>
+		<p>
+
+		</p>
+
+		<h1>
+			https://cal-cs184-student.github.io/sp22-project-webpages-BradyWang888/proj3-1/index.html
+		</h1>
 	</body>
 </html>
