--- a/proj3-2/index.html
+++ b/proj3-2/index.html
@@ -8,6 +8,11 @@
 		</h1>
 		<p>
 			1.
+			<br><img src="./0.005.png", alt="1">
+				<img src="./0.05.png", alt="2">
+				<img src="./0.25.png", alt="3">
+				<img src="./0.5.png", alt="4">
+			<br> A smaller alpha will make the picture look more metallic.
 		</p>
 		<h1>
 			Part2:
