--- a/proj3-2/index.html
+++ b/proj3-2/index.html
@@ -13,6 +13,9 @@
 				<img src="./0.25.png", alt="3">
 				<img src="./0.5.png", alt="4">
 			<br> A smaller alpha will make the picture look more metallic.
+			<br>2.<img src="./d.png", alt="1">
+				<img src="./i.png", alt="2">
+			<br> the left one is default and right one is importance. The default one has more noise than the importance one.
 		</p>
 		<h1>
 			Part2:
