--- a/proj3-2/index.html
+++ b/proj3-2/index.html
@@ -16,6 +16,8 @@
 			<br>2.<img src="./d.png", alt="1">
 				<img src="./i.png", alt="2">
 			<br> the left one is default and right one is importance. The default one has more noise than the importance one.
+			<br>3.<img src="./c.png", alt="1">
+			<br>The material is Calcium.
 		</p>
 		<h1>
 			Part2:
