--- a/proj3-2/index.html
+++ b/proj3-2/index.html
@@ -23,11 +23,20 @@
 			Part2:
 		</h1>
 		<p>
-
+			1. For pinhole camera, everything is in focus while thin-lens camera has lens radius and can only focus on things within camera's
+			focal distance.
+			<br>2. <img src="./1.png", alt="2">
+			<img src="./2.png", alt="2">
+			<img src="./3.png", alt="2">
+			<img src="./4.png", alt="2">
+			<br>3.<img src="./a.png", alt="2">
+			<img src="./b.png", alt="2">
+			<img src="./c.png", alt="2">
+			<img src="./d.png", alt="2">
 		</p>
 
 		<h1>
-			https://cal-cs184-student.github.io/sp22-project-webpages-BradyWang888/proj3-1/index.html
+			https://cal-cs184-student.github.io/sp22-project-webpages-BradyWang888/proj3-2/index.html
 		</h1>
 	</body>
 </html>
