--- a/proj3-2/index.html
+++ b/proj3-2/index.html
@@ -29,10 +29,10 @@
 			<img src="./2.png", alt="2">
 			<img src="./3.png", alt="2">
 			<img src="./4.png", alt="2">
-			<br>3.<img src="./a.png", alt="2">
-			<img src="./b.png", alt="2">
-			<img src="./c.png", alt="2">
-			<img src="./d.png", alt="2">
+			<br>3.<img src="./aa.png", alt="2">
+			<img src="./bb.png", alt="2">
+			<img src="./cc.png", alt="2">
+			<img src="./dd.png", alt="2">
 		</p>
 
 		<h1>
