--- a/proj4/index.html
+++ b/proj4/index.html
@@ -1,7 +1,27 @@
 <html>
 	<head>
+		Project 4
 	</head>
 	<body>
-		Project 4 here
+		<h1>
+			Part1:
+		</h1>
+		<p>
+			1.
+			<br><img src="./1-1.png", alt="2">
+			<br>2.
+			<br><img src="./1-2.png", alt="2">
+			<img src="./1-3.png", alt="2">
+			<img src="./1-4.png", alt="2">
+		</p>
+		<h1>
+			Part2:
+		</h1>
+		<p>
+		</p>
+
+		<h1>
+			https://cal-cs184-student.github.io/sp22-project-webpages-BradyWang888/proj3-2/index.html
+		</h1>
 	</body>
 </html>
