--- a/proj4/index.html
+++ b/proj4/index.html
@@ -18,6 +18,26 @@
 			Part2:
 		</h1>
 		<p>
+			1.
+			<br>ks:
+			<br><img src="./2-1.png", alt="2">
+			<img src="./2-2.png", alt="2">
+			<img src="./2-3.png", alt="2">
+			<br>A smaller ks will make the cloth look "softer".
+			<br>
+			<br>density:
+			<br><img src="./2-4.png", alt="2">
+			<img src="./2-5.png", alt="2">
+			<img src="./2-6.png", alt="2">
+			<br>A higher density will make the cloth feel "heavier".
+			<br>
+			<br>damping:
+			<br><img src="./2-7.png", alt="2">
+			<img src="./2-8.png", alt="2">
+			<img src="./2-9.png", alt="2">
+			<br>A low damping will make the cloth move very fast;A high damping will make the cloth move very slow.
+			<br>2.
+			<br><img src="./2-10.png", alt="2">
 		</p>
 
 		<h1>
