--- a/proj4/index.html
+++ b/proj4/index.html
@@ -39,6 +39,17 @@
 			<br>2.
 			<br><img src="./2-10.png", alt="2">
 		</p>
+		<h1>
+			Part3:
+		</h1>
+		<p>
+			1.
+			<br><img src="./3-1.png", alt="2">
+			<img src="./3-2.png", alt="2">
+			<img src="./3-3.png", alt="2">
+			<br>When the ks is smaller, the cloth seems like "softer".
+			<br>2. <img src="./3-4.png", alt="2">
+		</p>
 
 		<h1>
 			https://cal-cs184-student.github.io/sp22-project-webpages-BradyWang888/proj3-2/index.html
