--- a/proj4/index.html
+++ b/proj4/index.html
@@ -50,9 +50,17 @@
 			<br>When the ks is smaller, the cloth seems like "softer".
 			<br>2. <img src="./3-4.png", alt="2">
 		</p>
+		<h1>
+			Part4:
+		</h1>
+		<p>
+			1.
+			<br>My code follows the spec and I set z-value to be random. But my cloth still stand still.
+			<br><img src="./4.png", alt="2">
+		</p>
 
 		<h1>
-			https://cal-cs184-student.github.io/sp22-project-webpages-BradyWang888/proj3-2/index.html
+			https://cal-cs184-student.github.io/sp22-project-webpages-BradyWang888/proj4/index.html
 		</h1>
 	</body>
 </html>
